Added live server data requests and handling. Updated the documentation to cover the exploration and future work.

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.application.name=evaluation
 
-logging.structured.format.console=ecs
+#logging.structured.format.console=ecs
+
+logging.level.studio.coffeesocial.evaluation=debug
