--- a/server/pom.xml
+++ b/server/pom.xml
@@ -48,6 +48,11 @@
 			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
 			<version>2.8.8</version>
 		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.dataformat</groupId>
+			<artifactId>jackson-dataformat-xml</artifactId>
+			<version>2.19.0</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.projectlombok</groupId>
